<resources>
    <string name="app_name">My Application</string>
    <string name="LayoutExer">Layout Exercise</string>
    <string name="ButtonExer">Button Exercise</string>
    <string name="CalcuExer">Calculator Exercise</string>
    <string name="ConnecFour">Connect Three</string>
    <string name="Act1">Return to main</string>
    <string name="Act2">Activity 2</string>
    <string name="Act3">Activity 3</string>
    <string name="Act4">Activity 4</string>
    <string name="btnBckGrndChange">Change Button Background </string>
    <string name="BckGrndChange">Change Background</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Divide">÷</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Decimal">.</string>
    <string name="Equal">=</string>
    <string name="Multiply">×</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passing_intents">Pass intent</string>
    <string name="fragment">Fragment</string>
    <string name="studRegForm">Student Registration Form</string>
    <string name="cmplName">Complete Name</string>
    <string name="gender">Gender</string>
    <string name="btnPassIntent">Passing Intents</string>
    <string name="btnFragment">Fragments</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnClear">Clear</string>
    <string name="txtBirthDate">Birth Date</string>
    <string name="txtPhoneNumber">Phone Number</string>
    <string name="txtEmailAddress">Email Address</string>
    <string name="txtHomeAddress">Home Address</string>
    <string name="txtGSIS">GSIS Pin</string>
    <string name="txtPassportNumber">Passport Number</string>
    <string name="txtDriversLicenseNumber">License Number</string>
    <string name="txtBankAccountNumber">Bank Account Number</string>
    <string name="txtFname">First Name</string>
    <string name="txtLname">Last Name</string>
    <string name="txtStudentProfile">Student Profile</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtOthers">Others</string>
    <string name="btnReturn">Return</string>
    <string name="btnMenus">Menus</string>
    <string name="Change">Change</string>
    <string name="Reset">Reset</string>
    <string name="Exit">Exit</string>
    <string name="btnTransformingButton"></string>
    <string name="empty"></string>
    <string name="randomColor">Randomize color</string>
    <string name="cntryBall">Country ball</string>
    <string name="changePos">Change position</string>
    <string name="boxy">Turn box</string>
    <string name="moveLikeDvdD">Move object</string>
    <string name="openingMap">Opening Maps</string>
</resources>